[workspace]
members = [
    "bin/scrape-docs",
    "bin/tl-to-json",
    "lib/grammers",
    "lib/grammers-client",
    "lib/grammers-crypto",
    "lib/grammers-mtproto",
    "lib/grammers-mtsender",
    "lib/grammers-session",
    "lib/grammers-tl-gen",
    "lib/grammers-tl-parser",
    "lib/grammers-tl-types",
]
resolver = "2"

[workspace.package]
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Lonami/grammers"
repository = "https://github.com/Lonami/grammers"
keywords = ["telegram", "tl"]
edition = "2021"

[workspace.dependencies]
chrono = "0.4.31"
futures-util = "0.3.15"
html5ever = "0.26.0"
locate-locale = "0.2.0"
log = "0.4.20"
md5 = "0.7.0"
mime_guess = "2.0.4"
os_info = "3.0.4"
pin-project-lite = "0.2"
pulldown-cmark = "0.9.3"
tokio = "1.34.0"
url = "2.4.1"
simple_logger =  "4.2.0"
toml = "0.8.8"
aes = "0.8.3"
getrandom = "0.2.11"
glass_pumpkin = "1.6.0"
hmac = "0.12.1"
num-bigint = "0.4.4"
pbkdf2 = "0.12.2"
sha1 = "0.10.6"
sha2 = "0.10.8"
bencher = "0.1.5"
bytes = "1.5.0"
crc32fast = "1.3.2"
flate2 = "1.0.28"
tokio-socks = "0.5.1"
trust-dns-resolver = "0.23.2"
serde = "1.0.192"
reqwest = "0.11.22"
select = "0.6.0"
serde_json = "1.0.108"
futures = "0.3.29"


grammers-client = { path = "lib/grammers-client" }
grammers-crypto = { path = "lib/grammers-crypto" }
grammers-mtproto = { path = "lib/grammers-mtproto" }
grammers-mtsender = { path = "lib/grammers-mtsender" }
grammers-session = { path = "lib/grammers-session" }
grammers-tl-gen = { path = "lib/grammers-tl-gen" }
grammers-tl-parser = { path = "lib/grammers-tl-parser" }
grammers-tl-types = { path = "lib/grammers-tl-types" }

