[package]
name = "grammers-client"
version = "0.8.1"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
A high level client to interact with Telegram's API.
"""
homepage = "https://github.com/Lonami/grammers"
documentation = "https://docs.rs/grammers-client"
repository = "https://github.com/Lonami/grammers"
keywords = ["mtproto", "telegram", "tl"]
categories = ["api-bindings"]
edition = "2024"

[features]
markdown = ["pulldown-cmark"]
html = ["html5ever"]
proxy = ["grammers-mtsender/proxy"]
parse_invite_link = ["url"]
fs = ["tokio/fs"]
default = ["fs"]

[dependencies]
chrono = "0.4.42"
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc"
] }
grammers-crypto = { path = "../grammers-crypto", version = "0.8.0" }
grammers-mtsender = { path = "../grammers-mtsender", version = "0.8.1" }
grammers-session = { path = "../grammers-session", version = "0.8.0", default-features = false }
grammers-tl-types = { path = "../grammers-tl-types", version = "0.8.0", features = [
    "tl-mtproto",
] }
html5ever = { version = "0.35.0", optional = true }
log = "0.4.28"
md5 = "0.8.0"
mime_guess = "2.0.5"
pin-project-lite = "0.2"
pulldown-cmark = { version = "0.13.0", default-features = false, optional = true }
tokio = { version = "1.47.1", default-features = false, features = [
    "rt", "macros"
] }
url = { version = "2.5.7", optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", default-features = false, features = [
    "signal",
] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "colors",
] }
toml = "0.9.8"
