[package]
name = "grammers-mtproto"
version = "0.8.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
An implementation of the Mobile Transport Protocol.
"""
homepage = "https://github.com/Lonami/grammers"
documentation = "https://docs.rs/grammers-mtproto"
repository = "https://github.com/Lonami/grammers"
keywords = ["mtproto", "telegram", "tl"]
categories = ["network-programming"]
edition = "2024"

[dependencies]
bytes = "1.10.1"
crc32fast = "1.5.0"
flate2 = "1.1.4"
getrandom = "0.3.3"
grammers-crypto = { path = "../grammers-crypto", version = "0.8.0" }
grammers-tl-types = { path = "../grammers-tl-types", version = "0.8.0", features = ["tl-mtproto"] }
log = "0.4.28"
num-bigint = "0.4.6"
sha1 = "0.10.6"

[dev-dependencies]
toml = "0.9.8"
