[package]
name = "grammers-session"
version = "0.8.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Different session storages for Telegram data.
"""
homepage = "https://github.com/Lonami/grammers"
documentation = "https://docs.rs/grammers-session"
repository = "https://github.com/Lonami/grammers"
keywords = ["telegram", "tl"]
categories = []
edition = "2024"

[dependencies]
futures-core = "0.3.31"
grammers-tl-types = { path = "../grammers-tl-types", version = "0.8.0" }
log = "0.4.28"

libsql = { version = "0.9.29", optional = true }
tokio = { version = "1.47.1", default-features = false }

serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3", features = ["hex"], optional = true }

[dev-dependencies]
toml = "0.9.8"

[features]
default = ["sqlite-storage"]
sqlite-storage = ["dep:libsql"]
serde = ["dep:serde", "dep:serde_with"]
