[package]
name = "grammers"
version = "0.1.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
A messaging application for Telegram.
"""
homepage = "https://github.com/Lonami/grammers"
repository = "https://github.com/Lonami/grammers"
keywords = ["telegram", "tl"]
categories = []
edition = "2024"

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
async-compat = "0.2.4"
chrono = "0.4.41"
grammers-client = { path = "../grammers-client", version = "0.8.0" }
grammers-session = { path = "../grammers-session", version = "0.8.0" }
grammers-mtsender = { path = "../grammers-mtsender", version = "0.8.0" }
log = "0.4.27"
simple_logger = "5.0.0"
slint = "1.8.0"
tokio = { version = "1.45.1", features = ["sync"] }

[build-dependencies]
slint-build = "1.8.0"

[dev-dependencies]
arbtest = "0.3.2"
