[package]
name = "grammers-client"
version = "0.5.0"
authors.workspace = true
license.workspace = true
description = """
A high level client to interact with Telegram's API.
"""
homepage.workspace = true
documentation = "https://docs.rs/grammers-client"
repository.workspace = true
keywords = ["mtproto", "telegram", "tl"]
categories = ["api-bindings"]
edition.workspace = true

[features]
markdown = ["pulldown-cmark"]
html = ["html5ever"]
proxy = ["grammers-mtsender/proxy"]
parse_invite_link = ["url"]
unstable_raw = []

[dependencies]
chrono.workspace = true
futures-util = { workspace = true, default_features = false, features = [
    "alloc"
] }
grammers-crypto.workspace = true
grammers-mtproto.workspace = true
grammers-mtsender.workspace = true
grammers-session.workspace = true
grammers-tl-types = { workspace = true,  features = [
    "tl-mtproto",
] }
html5ever = { version = "0.26.0", optional = true }
locate-locale.workspace = true
log.workspace = true
md5.workspace = true
mime_guess.workspace = true
os_info = { workspace = true, default_features = false }
pin-project-lite.workspace = true
pulldown-cmark = { workspace = true, default-features = false, optional = true }
tokio = { workspace = true, features = [
    "fs",
    "rt",
] }
url = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "signal",
] }
simple_logger = { workspace = true, default-features = false, features = [
    "colors",
] }
toml.workspace = true
