[package]
name = "grammers-crypto"
version = "0.5.1"
authors.workspace = true
license.workspace = true
description = """
Several cryptographic utilities to work with Telegram's data.
"""
homepage.workspace = true
documentation = "https://docs.rs/grammers-crypto"
repository.workspace = true
keywords.workspace = true
categories = ["cryptography"]
edition.workspace = true

[dependencies]
aes.workspace = true
getrandom.workspace = true
glass_pumpkin.workspace = true
hmac.workspace = true
num-bigint.workspace = true
pbkdf2.workspace = true
sha1.workspace = true
sha2.workspace = true

[dev-dependencies]
bencher.workspace = true
toml.workspace = true


[[bench]]
name = "cipher"
harness = false
