[package]
name = "grammers-mtproto"
version = "0.5.0"
authors.workspace = true
license.workspace = true
description = """
An implementation of the Mobile Transport Protocol.
"""
homepage.workspace = true
documentation = "https://docs.rs/grammers-mtproto"
repository.workspace = true
keywords = ["mtproto", "telegram", "tl"]
categories = ["network-programming"]
edition.workspace = true

[dependencies]
bytes.workspace = true
crc32fast.workspace = true
flate2.workspace = true
getrandom.workspace = true
grammers-crypto.workspace = true
grammers-tl-types = { workspace = true,  features = ["tl-mtproto"] }
log.workspace = true
num-bigint.workspace = true
sha1.workspace = true

[dev-dependencies]
toml.workspace = true
