[package]
name = "grammers-session"
version = "0.3.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Different session storages for Telegram data.
"""
homepage = "https://github.com/Lonami/grammers"
documentation = "https://docs.rs/grammers-session"
repository = "https://github.com/Lonami/grammers"
keywords = ["telegram", "tl"]
categories = []
edition = "2018"

[dependencies]
grammers-tl-types = { path = "../grammers-tl-types", version = "0.3.0" }
log = "0.4.14"

[build-dependencies]
grammers-tl-gen = { path = "../grammers-tl-gen", version = "0.3.0" }
grammers-tl-parser = { path = "../grammers-tl-parser", version = "1.0.1" }

[dev-dependencies]
toml = "0.5.8"
