[package]
name = "grammers-session"
version = "0.5.1"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Different session storages for Telegram data.
"""
homepage = "https://github.com/Lonami/grammers"
documentation = "https://docs.rs/grammers-session"
repository = "https://github.com/Lonami/grammers"
keywords.workspace = true
categories = []
edition.workspace = true

[dependencies]
grammers-tl-types.workspace = true
grammers-crypto.workspace = true 
log.workspace = true

[build-dependencies]
grammers-tl-gen.workspace = true
grammers-tl-parser.workspace = true

[dev-dependencies]
toml.workspace = true
