[package]
name = "grammers-tl-gen"
version = "0.5.1"
authors.workspace = true
license.workspace = true
description = """
Rust code generator from Telegram's API definitions.
"""
homepage.workspace = true
documentation = "https://docs.rs/grammers-tl-gen"
repository.workspace = true
keywords.workspace = true
categories = []
edition.workspace = true

[dependencies]
grammers-tl-parser.workspace = true

[dev-dependencies]
toml.workspace = true