[package]
name = "grammers-tl-parser"
version = "1.1.1"
authors.workspace = true
license.workspace = true
description = """
A parser for Type Language definitions.
"""
homepage.workspace = true
documentation = "https://docs.rs/grammers-tl-parser"
repository.workspace = true
keywords.workspace = true
categories = ["parser-implementations"]
edition.workspace = true

[dependencies]
crc32fast.workspace = true

[dev-dependencies]
toml.workspace = true
