[package]
name = "grammers-tl-parser"
version = "1.1.1"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
A parser for Type Language definitions.
"""
homepage = "https://github.com/Lonami/grammers"
documentation = "https://docs.rs/grammers-tl-parser"
repository = "https://github.com/Lonami/grammers"
keywords = ["telegram", "tl"]
categories = ["parser-implementations"]
edition = "2021"

[dependencies]
crc32fast = "1.3.2"

[dev-dependencies]
toml = "0.8.8"
