[package]
name = "grammers-tl-types"
version = "0.5.1"
authors.workspace = true
license.workspace = true
description = """
Rust definitions for Telegram's API types and functions.
"""
homepage.workspace = true
documentation = "https://docs.rs/grammers-tl-types"
repository.workspace = true
keywords.workspace = true
categories = ["data-structures", "encoding"]
edition.workspace = true
include = [
    "build.rs",
    "src/*.rs",
    "tl/*.tl",
]

[build-dependencies]
grammers-tl-gen.workspace = true
grammers-tl-parser.workspace = true

[dev-dependencies]
toml.workspace = true

[features]
default = ["impl-debug", "impl-from-enum", "impl-from-type", "tl-api"]

deserializable-functions = []
impl-debug = []
impl-from-enum = []
impl-from-type = []
tl-api = []
tl-mtproto = []
