[package]
name = "grammers"
version = "0.1.0"
authors.workspace = true
license.workspace = true
description = """
A messaging application for Telegram.
"""
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories = []
edition.workspace = true

[dependencies]
grammers-client.workspace = true
